# apis-acdhch-default-settings

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: linters.yml  publish.yml  release-please.yml
apis-acdhch-default-settings/: urls.py
apis_acdhch_default_settings/: ldapauth.py  querysets.py  settings.py  urls.py  utils.py  views.py
apis_acdhch_default_settings/locale/de/LC_MESSAGES/: django.po
apis_acdhch_default_settings/management/commands/: export.py
apis_acdhch_default_settings/templates/: base.html  e53_place_from_typesense_autocomplete_result.html  imprint.html
apis_acdhch_default_settings/templates/partials/: footer.html
