[project]
name = "apis-acdhch-default-settings"
version = "2.3.1"
description = "Default settings for APIS instances at the ACDH-CH"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
license = "MIT"
dependencies = [
    "sentry-sdk>=1.26.0",
    "dj-database-url>=2.0.0",
    "django-allow-cidr>=0.6,<0.8",
    "django-csp>=3.7",
    "whitenoise>=5.2,<7.0",
    "django-auth-ldap>=4.6.0",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-wsgi",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-exporter-otlp",
    "opentelemetry-distro",
    "django-removals>=1.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
