[project]
name = "apis-acdhch-default-settings"
version = "2.16.0"
description = "Default settings for APIS instances at the ACDH-CH"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
license = "MIT"
dependencies = [
    "dj-database-url>=2.0.0,<4.0",
    "django-allow-cidr>=0.6,<0.9",
    "django-csp>=3.7,<4.0",
    "whitenoise>=5.2,<7.0",
    "django-auth-ldap>=4.6.0,<6.0",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-wsgi",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-exporter-otlp",
    "opentelemetry-distro",
    "django-removals>=1.0.5,<=2.0",
    "django>=5",
    "apis-core-rdf>=0.58.0",
    "requests>=2",
    "django-auditlog>=3.1.2",
    "apis-acdhch-django-auditlog>=0.2.1",
]
[project.urls]
source = "https://github.com/acdh-oeaw/apis-acdhch-default-settings"
changelog = "https://github.com/acdh-oeaw/apis-acdhch-default-settings/blob/main/CHANGELOG.md"
issues = "https://github.com/acdh-oeaw/apis-acdhch-default-settings/issues"

[tool.uv]
dev-dependencies = [
    "deptry==0.23",
    "djlint==1.36.4",
    "ruff==0.11.2",
]

[tool.djlint]
ignore = "H006"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["**/*.mo"]

[tool.hatch.build.targets.sdist]
artifacts = ["**/*.mo"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "django-allow-cidr",
  "django-csp",
  "whitenoise",
  "django-removals",
  "opentelemetry-instrumentation-asgi",
  "opentelemetry-instrumentation-wsgi",
  "opentelemetry-instrumentation-django",
  "opentelemetry-instrumentation-logging",
  "opentelemetry-instrumentation-psycopg2",
  "opentelemetry-exporter-otlp",
  "opentelemetry-distro",
  "django-auditlog",
  "apis-acdhch-django-auditlog"
]

[tool.deptry.package_module_name_map]
apis-core-rdf = "apis_core"
